--- a/xseller8-vite/src/App.css
+++ b/xseller8-vite/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/Xseller8LogoBNG.png');
+  background-image: url('D:/GitRepos/PriceXseller8/xseller8-vite/public/Xseller8logoBnG.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
